feat(#571, #548): CaseLifecycleEvent enrichment + composed GoalExpression
CaseLifecycleEvent enriched with caseDefinitionName, namespace, and
contextSnapshot (JsonNode working layer). Static factories: of(CaseInstance, ...)
for enriched events, of(UUID, String, ...) for sites without CaseInstance.
Eliminates consumer round-trip to caseInstanceRepository.

GoalExpression redesigned as sealed recursive tree (AllOfGoalExpression,
AnyOfGoalExpression, SingleGoalExpression). Evaluation via isSatisfiedBy/
satisfiedGoalName on the expression tree replaces handler instanceof checks.
YAML completion block supports nested composition:
  anyOf:
    - allOf: [a, b, c]
    - d
Parse-time validation rejects unknown goal references and empty arrays.

Closes #571
Closes #548

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>